[package]
name = "rust-cmark-zathura"
version = "0.1.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zathura-plugin = "0.4.0"
pulldown-cmark = "0.7.1"
cairo-rs = "0.6.0"
pangocairo = "0.7.0"
pango = "0.6.0"

[lib]
crate-type = ["cdylib"]
